--- a/ParallelComputing.rmd
+++ b/ParallelComputing.rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 rm(list=ls())
 
+#Script modified from
 #http://r-statistics.co/Parallel-Computing-With-R.html
 ```
 
@@ -33,20 +34,32 @@ registerDoSNOW(cl) # Register back end Cores for Parallel Computing
 ```{r}
 library(foreach)
 foreach(i = 1:28) %dopar% {sqrt(i)} # example 1
+```
 
+
+```{r}
 # returned output values of the parallel process are combined using 'c()' function
 foreach(i = 1:28,.combine = "c") %dopar% {sqrt(i)} # example 2
+```
 
+
+```{r}
 # returned output values of the parallel process are combined using 'cbind()' function
-foreach(i = 1:28,.combine = "cbind") %dopar% {letters[1:4]} # example 3 
+foreach(i = 1:28,.combine = "cbind") %dopar% {letters[1:4]} # example 3
+```
 
+
+```{r}
 # Using your custom defined function: "myCustomFunc()" and store in 'output' variable # Example 4
 myCustomFunc <- function(i){sqrt(i)+25}
 
 output <- foreach(i = 1:28, .combine = "cbind") %dopar% {
   myCustomFunc(i)
 }
+```
 
+
+```{r}
 stopCluster(cl)
 ```
 
@@ -65,6 +78,8 @@ for (rowNum in c(1:nrow(inputData))) {
   calculatedOutput <- inputData[rowNum, 1] - inputData[rowNum, 2] + inputData[rowNum, 3] / inputData[rowNum, 4] # compute output
   output_serial <- c(output_serial, calculatedOutput) # append to output variable
 }
+
+head(output_serial)
 ```
 
 # Running in Parallel 
@@ -87,6 +102,8 @@ output_parallel <-
     
     return (calculatedOutput)
   }
+
+head(output_parallel)
 ```
 
 # Calculate the time needed to run the two functions 
@@ -111,7 +128,7 @@ system.time(
   }
 )
 ```
-#  Unregister Cluster
+#  Unregistering Cluster
 ```{r}
 stopCluster(cl)
 ```
